Lab3 Really Finalized

--- a/lab3/document-retrieval.ipynb
+++ b/lab3/document-retrieval.ipynb
@@ -616,7 +616,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.18896718]])"
+       "array([ 0.18896718])"
       ]
      },
      "execution_count": 22,
@@ -625,7 +625,7 @@
     }
    ],
    "source": [
-    "cosine_similarity(obama['tfidf'].values[0], clinton['tfidf'].values[0])"
+    "cosine_similarity(obama['tfidf'].values[0], clinton['tfidf'].values[0]).flatten()"
    ]
   },
   {
@@ -1464,38 +1464,23 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<59071x548115 sparse matrix of type '<type 'numpy.float64'>'\n",
-       "\twith 8078359 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tfidf_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def get_closest_neighbors(name):\n",
-    "    row                = people.index.get_loc(name)\n",
+    "def closest_neighbors_tfidf(name):\n",
+    "    res = {}\n",
+    "    someone1 = people[people.index == name].copy()\n",
+    "    row = people.index.get_loc(name)\n",
     "    distances, indices = nbrs.kneighbors(tfidf_matrix.getrow(row))\n",
-    "    names_similar      = pd.Series(indices.flatten()).map(people.reset_index()['name'])\n",
-    "    result             = pd.DataFrame({'distance':distances.flatten(), 'name':names_similar})\n",
-    "    return result"
+    "    names_similar = pd.Series(indices.flatten()).map(people.reset_index()['name'])\n",
+    "    for ts in names_similar:\n",
+    "        someone2 = people[people.index == ts].copy()\n",
+    "        dist = cosine_similarity(someone1['tfidf'].values[0], someone2['tfidf'].values[0])\n",
+    "        res[ts] = dist.flatten()\n",
+    "    result = pd.Series(res)\n",
+    "    return result.sort_values(ascending=False)"
    ]
   },
   {
@@ -1510,40 +1495,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "count_vectorizer    = CountVectorizer()\n",
-    "wc_matrix = count_vectorizer.fit_transform(people['text'])"
+    "wc_matrix = count_vectorizer.fit_transform(people['text'])\n",
+    "people['word_count'] = list(count_vectorizer.fit_transform(people['text'].values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<59071x548429 sparse matrix of type '<type 'numpy.int64'>'\n",
-       "\twith 10244028 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wc_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -1554,18 +1519,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def get_closest_neighbors_wc(name):\n",
+    "    res = {}\n",
+    "    someone1 = people[people.index == name].copy()\n",
     "    row                = people.index.get_loc(name)\n",
     "    distances, indices = nbrs_wc.kneighbors(wc_matrix.getrow(row))\n",
     "    names_similar      = pd.Series(indices.flatten()).map(people.reset_index()['name'])\n",
-    "    result             = pd.DataFrame({'distance':distances.flatten(), 'name':names_similar})\n",
-    "    return result"
+    "    for ts in names_similar:\n",
+    "        someone2 = people[people.index == ts].copy()\n",
+    "        dist = cosine_similarity(someone1['word_count'].values[0], someone2['word_count'].values[0])\n",
+    "        res[ts] = dist.flatten()\n",
+    "    result = pd.Series(res)\n",
+    "    return result.sort_values(ascending=False)"
    ]
   },
   {
@@ -1580,218 +1551,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>distance</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Elton John</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.186742</td>\n",
-       "      <td>Rod Stewart</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.196510</td>\n",
-       "      <td>Sting (musician)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.203888</td>\n",
-       "      <td>George Michael</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.204019</td>\n",
-       "      <td>Phil Collins</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.218337</td>\n",
-       "      <td>Kelly Clarkson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.221504</td>\n",
-       "      <td>Usher (entertainer)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1.223884</td>\n",
-       "      <td>Adele</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.229677</td>\n",
-       "      <td>Rihanna</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.232415</td>\n",
-       "      <td>Bryan Adams</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   distance                 name\n",
-       "0  0.000000           Elton John\n",
-       "1  1.186742          Rod Stewart\n",
-       "2  1.196510     Sting (musician)\n",
-       "3  1.203888       George Michael\n",
-       "4  1.204019         Phil Collins\n",
-       "5  1.218337       Kelly Clarkson\n",
-       "6  1.221504  Usher (entertainer)\n",
-       "7  1.223884                Adele\n",
-       "8  1.229677              Rihanna\n",
-       "9  1.232415          Bryan Adams"
+       "Elton John                        [1.0]\n",
+       "Rod Stewart            [0.295821626388]\n",
+       "Sting (musician)       [0.284182407542]\n",
+       "George Michael          [0.27532732188]\n",
+       "Phil Collins           [0.275169566131]\n",
+       "Kelly Clarkson         [0.257827381954]\n",
+       "Usher (entertainer)    [0.253964406795]\n",
+       "Adele                  [0.251054061537]\n",
+       "Rihanna                [0.243946696916]\n",
+       "Bryan Adams            [0.240576730763]\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_closest_neighbors('Elton John')"
+    "closest_neighbors_tfidf('Elton John')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>distance</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Victoria Beckham</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.072772</td>\n",
-       "      <td>David Beckham</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.264277</td>\n",
-       "      <td>Stephen Dow Beckham</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.274599</td>\n",
-       "      <td>Caroline Rush</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.276112</td>\n",
-       "      <td>Angelique Westerhof</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.280018</td>\n",
-       "      <td>Wal%C3%A9 Adeyemi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.280657</td>\n",
-       "      <td>Colin McDowell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1.280896</td>\n",
-       "      <td>Zurain Imam</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.281365</td>\n",
-       "      <td>Mel B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.281901</td>\n",
-       "      <td>Yuliya Polishchuk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   distance                 name\n",
-       "0  0.000000     Victoria Beckham\n",
-       "1  1.072772        David Beckham\n",
-       "2  1.264277  Stephen Dow Beckham\n",
-       "3  1.274599        Caroline Rush\n",
-       "4  1.276112  Angelique Westerhof\n",
-       "5  1.280018    Wal%C3%A9 Adeyemi\n",
-       "6  1.280657       Colin McDowell\n",
-       "7  1.280896          Zurain Imam\n",
-       "8  1.281365                Mel B\n",
-       "9  1.281901    Yuliya Polishchuk"
+       "Victoria Beckham                  [1.0]\n",
+       "David Beckham           [0.42457996295]\n",
+       "Stephen Dow Beckham     [0.20080178188]\n",
+       "Caroline Rush          [0.187699276267]\n",
+       "Angelique Westerhof    [0.185768847414]\n",
+       "Wal%C3%A9 Adeyemi      [0.180776706179]\n",
+       "Colin McDowell         [0.179958459642]\n",
+       "Zurain Imam            [0.179653273481]\n",
+       "Mel B                  [0.179051455608]\n",
+       "Yuliya Polishchuk      [0.178365410584]\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_closest_neighbors('Victoria Beckham')"
+    "closest_neighbors_tfidf('Victoria Beckham')"
    ]
   },
   {
@@ -1806,104 +1621,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>distance</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Elton John</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>27.748874</td>\n",
-       "      <td>Roger Daltrey</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>27.928480</td>\n",
-       "      <td>Rod Stewart</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>28.913665</td>\n",
-       "      <td>John Ronane</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>29.223278</td>\n",
-       "      <td>Matthew Kalman</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>29.223278</td>\n",
-       "      <td>Brad Fiedel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>29.274562</td>\n",
-       "      <td>Robert E. Lerner</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>29.274562</td>\n",
-       "      <td>Robbie Williams</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>29.291637</td>\n",
-       "      <td>Michael White (author)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>29.444864</td>\n",
-       "      <td>Alex Scott (actor)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    distance                    name\n",
-       "0   0.000000              Elton John\n",
-       "1  27.748874           Roger Daltrey\n",
-       "2  27.928480             Rod Stewart\n",
-       "3  28.913665             John Ronane\n",
-       "4  29.223278          Matthew Kalman\n",
-       "5  29.223278             Brad Fiedel\n",
-       "6  29.274562        Robert E. Lerner\n",
-       "7  29.274562         Robbie Williams\n",
-       "8  29.291637  Michael White (author)\n",
-       "9  29.444864      Alex Scott (actor)"
+       "Elton John                           [1.0]\n",
+       "Rod Stewart               [0.825509328213]\n",
+       "Roger Daltrey              [0.81598702291]\n",
+       "Robbie Williams           [0.802375318243]\n",
+       "John Ronane               [0.799892149923]\n",
+       "Brad Fiedel               [0.793321838255]\n",
+       "Robert E. Lerner          [0.792440105169]\n",
+       "Matthew Kalman            [0.792215293362]\n",
+       "Michael White (author)     [0.79108640872]\n",
+       "Alex Scott (actor)        [0.788620870069]\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,104 +1651,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>distance</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Victoria Beckham</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>22.538855</td>\n",
-       "      <td>Kelly Bell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>23.366643</td>\n",
-       "      <td>Rhian Samuel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>23.366643</td>\n",
-       "      <td>Rikke Karlsson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>23.388031</td>\n",
-       "      <td>Marie Brassard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>23.494680</td>\n",
-       "      <td>Renee Nele</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>23.494680</td>\n",
-       "      <td>Hilary Alexander</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>23.515952</td>\n",
-       "      <td>Yeojin Bae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>23.515952</td>\n",
-       "      <td>Ali Hewson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>23.579652</td>\n",
-       "      <td>Gillian Mann</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    distance              name\n",
-       "0   0.000000  Victoria Beckham\n",
-       "1  22.538855        Kelly Bell\n",
-       "2  23.366643      Rhian Samuel\n",
-       "3  23.366643    Rikke Karlsson\n",
-       "4  23.388031    Marie Brassard\n",
-       "5  23.494680        Renee Nele\n",
-       "6  23.494680  Hilary Alexander\n",
-       "7  23.515952        Yeojin Bae\n",
-       "8  23.515952        Ali Hewson\n",
-       "9  23.579652      Gillian Mann"
+       "Victoria Beckham               [1.0]\n",
+       "Kelly Bell          [0.754698289884]\n",
+       "Rikke Karlsson       [0.74966908203]\n",
+       "Hilary Alexander    [0.745639406291]\n",
+       "Rhian Samuel        [0.736585270221]\n",
+       "Marie Brassard      [0.733913111572]\n",
+       "Ali Hewson          [0.733773684755]\n",
+       "Gillian Mann        [0.731634781032]\n",
+       "Renee Nele           [0.72978005619]\n",
+       "Yeojin Bae          [0.727977190074]\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
