--- a/HW_2/Recommender_System.ipynb
+++ b/HW_2/Recommender_System.ipynb
@@ -17,8 +17,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import numpy"
+    "import pandas as pd"
    ]
   },
   {
