--- a/HW_1/ex1.ipynb
+++ b/HW_1/ex1.ipynb
@@ -667,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predição de Preço com a Regressão Linear"
+    "### Predição de Lucro com a Regressão Linear"
    ]
   },
   {
@@ -1035,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
